--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,129 +6,109 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <com.google.android.material.card.MaterialCardView
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:cardCornerRadius="6dp">
+        android:paddingBottom="100dp">
 
-        <FrameLayout
+        <LinearLayout
+            android:id="@+id/lyt"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:paddingBottom="100dp">
+            android:layout_height="470dp"
+            android:orientation="vertical">
 
-            <LinearLayout
-                android:id="@+id/lyt"
+            <ImageView
+                android:id="@+id/movie_poster"
                 android:layout_width="match_parent"
-                android:layout_height="470dp"
-                android:orientation="vertical">
+                android:layout_height="300dp"
 
-                <ImageView
-                    android:id="@+id/img_backdrop"
-                    android:layout_width="match_parent"
-                    android:layout_height="300dp"
-
-                    android:layout_marginBottom="15dp"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/ic_image_placeholder_24" />
+                android:layout_marginBottom="15dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/ic_image_placeholder_24" />
 
 
-                <TextView
-                    android:id="@+id/txt_title"
-                    style="@style/TextAppearance.MaterialComponents.Headline6"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="15dp"
-                    android:text="title" />
-
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-
-                    <TextView
-                        android:id="@+id/txt_release_date"
-                        style="@style/TextAppearance.MaterialComponents.Body2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_marginBottom="15dp"
-                        android:lines="1"
-                        android:maxLines="1"
-                        android:text="34-05-2022"
-                        android:textSize="16sp" />
-
-
-                </LinearLayout>
-
-
-                <TextView
-                    android:id="@+id/txt_overView"
-                    style="@style/TextAppearance.Material3.BodyMedium"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="esse filme é sobre" />
-
-
-                <Button
-                    android:id="@+id/btn_favorites"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:backgroundTint="@color/purple_700"
-                    android:text="Add to Favorites"
-                    android:textAllCaps="false"
-                    android:visibility="gone" />
-
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/lyt2"
+            <TextView
+                android:id="@+id/movie_title"
+                style="@style/TextAppearance.MaterialComponents.Headline6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:gravity="center"
-                android:orientation="vertical">
+                android:layout_marginBottom="15dp"
+                android:text="titl" />
 
 
-                <ProgressBar
-                    android:id="@+id/progress_bar"
-                    style="?android:attr/progressBarStyle"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/retry_button"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/retry"
-                    android:visibility="gone"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/txt_error"
-                    android:layout_width="match_parent"
+                    android:id="@+id/movie_release_date"
+                    style="@style/TextAppearance.MaterialComponents.Body2"
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:gravity="center"
-                    android:textSize="16sp"
-                    android:visibility="gone" />
+                    android:layout_marginBottom="15dp"
+                    android:lines="1"
+                    android:maxLines="1"
+                    android:text="34-05-2022"
+                    android:textSize="16sp" />
+
 
             </LinearLayout>
 
-        </FrameLayout>
+
+            <TextView
+                android:id="@+id/txt_overView"
+                style="@style/TextAppearance.Material3.BodyMedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="esse filme é sobre" />
 
 
-    </com.google.android.material.card.MaterialCardView>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lyt2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:gravity="center"
+            android:orientation="vertical">
+
+
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+        </LinearLayout>
+
+        <ToggleButton
+            android:id="@+id/toggle_favorite"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+
+            android:layout_marginStart="310dp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/ic_favorite_white"
+            android:focusable="false"
+            android:focusableInTouchMode="false"
+            android:textOff=""
+            android:textOn="" />
+
+    </FrameLayout>
+
+
 
 
 </androidx.core.widget.NestedScrollView>
