--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -3,14 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="600px"
-    android:layout_marginStart="16dp"
-    android:layout_marginLeft="16dp"
+    android:layout_height="130dp"
+    android:layout_marginStart="6dp"
+    android:layout_marginLeft="6dp"
     android:layout_marginTop="8dp"
-    android:layout_marginEnd="16dp"
+    android:layout_marginEnd="6dp"
     android:layout_marginRight="16dp"
-    android:layout_marginBottom="8dp"
-    android:background="@color/dark_grey">
+    android:layout_marginBottom="2dp"
+    android:background="@color/black_c">
 
     <ImageView
         android:id="@+id/movie_poster"
@@ -47,7 +47,7 @@
         android:layout_marginLeft="16dp"
         android:layout_marginBottom="8dp"
         android:text="Release Date"
-        android:textColor="#FFEB3B"
+        android:textColor="@color/purple_200"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/movie_poster"
         app:layout_constraintTop_toBottomOf="@+id/movie_title"
