--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="dark_grey">#2D2D2D</color>
     <color name="white">#FFFFFF</color>
     <color name="black_c">#181919</color>
+    <color name="yellow">#f0f0b9</color>
 </resources>
