--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,8 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:background="@color/black"
+    android:orientation="vertical">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -14,16 +14,16 @@
         <LinearLayout
             android:id="@+id/lyt"
             android:layout_width="match_parent"
-            android:layout_height="470dp"
+            android:layout_height="match_parent"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/movie_poster"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="30dp"
                 android:scaleType="centerCrop"
+
                 android:src="@drawable/ic_image_placeholder_24" />
 
 
@@ -32,8 +32,11 @@
                 style="@style/TextAppearance.MaterialComponents.Headline6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="15dp"
-                android:text="titl" />
+                android:layout_marginHorizontal="16dp"
+                android:layout_marginBottom="20dp"
+                android:text="title"
+                android:textSize="25sp"
+                android:textColor="@color/purple_200" />
 
 
             <LinearLayout
@@ -47,10 +50,12 @@
                     style="@style/TextAppearance.MaterialComponents.Body2"
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
+                    android:layout_marginHorizontal="16dp"
                     android:layout_marginBottom="15dp"
                     android:lines="1"
                     android:maxLines="1"
-                    android:text="34-05-2022"
+                    android:text="2022"
+                    android:textColor="@color/yellow"
                     android:textSize="16sp" />
 
 
@@ -62,6 +67,8 @@
                 style="@style/TextAppearance.Material3.BodyMedium"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:textSize="16sp"
                 android:text="esse filme é sobre" />
 
 
@@ -89,8 +96,6 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
 
-
-
         </LinearLayout>
 
         <ToggleButton
@@ -107,8 +112,6 @@
             android:textOn="" />
 
     </FrameLayout>
-
-
 
 
 </androidx.core.widget.NestedScrollView>
