--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/black_c"
     android:orientation="vertical">
 
     <FrameLayout
@@ -35,8 +35,8 @@
                 android:layout_marginHorizontal="16dp"
                 android:layout_marginBottom="20dp"
                 android:text="title"
-                android:textSize="25sp"
-                android:textColor="@color/purple_200" />
+                android:textColor="@color/purple_150"
+                android:textSize="25sp" />
 
 
             <LinearLayout
@@ -68,8 +68,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="16dp"
-                android:textSize="16sp"
-                android:text="esse filme é sobre" />
+                android:text="esse filme é sobre"
+                android:textColor="@color/grey_50"
+                android:textSize="16sp" />
 
 
         </LinearLayout>
