--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    >
 
 
 
@@ -15,6 +16,5 @@
     <item
         android:id="@+id/action_more"
         android:icon="@drawable/ic_baseline_more_vert_24"
-
         app:showAsAction="ifRoom"/>
 </menu>
