--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <resources>
     <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_100">#e2bff2</color>
+    <color name="purple_150">#deb3f2</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
+    <color name="grey_50">#e0e0e0</color>
     <color name="teal_200">#FF03DAC5</color>
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
@@ -10,4 +14,5 @@
     <color name="white">#FFFFFF</color>
     <color name="black_c">#181919</color>
     <color name="yellow">#f0f0b9</color>
+    <color name="purple_900">#380252</color>
 </resources>
