--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -6,10 +6,12 @@
     android:background="@color/black_c"
     android:orientation="vertical">
 
+
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingBottom="100dp">
+
 
         <LinearLayout
             android:id="@+id/lyt"
@@ -17,11 +19,21 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+
+            <com.google.android.material.appbar.MaterialToolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@android:color/transparent">
+
+            </com.google.android.material.appbar.MaterialToolbar>
+
+
             <ImageView
                 android:id="@+id/movie_poster"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_marginBottom="30dp"
+                android:layout_marginBottom="14dp"
                 android:scaleType="centerCrop"
 
                 android:src="@drawable/ic_image_placeholder_24" />
@@ -104,8 +116,8 @@
             android:layout_width="48dp"
             android:layout_height="48dp"
 
-            android:layout_marginStart="310dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginStart="320dp"
+            android:layout_marginTop="58dp"
             android:background="@drawable/ic_favorite_white"
             android:focusable="false"
             android:focusableInTouchMode="false"
