--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -2,24 +2,32 @@
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/nav">
+    android:id="@+id/nav"
+    app:startDestination="@id/homeActivity"
+    >
+
 <activity
-    android:id="@+id/listafilmes"
+    android:id="@+id/homeActivity"
     android:name="com.example.themovie.ui.activity.HomeActivity"
-    android:label="Fragment_list"
     tools:layout="@layout/activity_main">
-    <action
-        app:destination="@+id/details"
-        />
+    <action app:destination="@id/favoritesActivity" />
+    <action app:destination="@id/detailsActivity" />
+
 </activity>
 
     <activity
-        android:id="@+id/details"
+        android:id="@+id/detailsActivity"
         android:name="com.example.themovie.ui.details.DetailActivity"
-        android:label="Fragment_details"
         tools:layout="@layout/fragment_detail">
-        <argument
-            android:name="SelectedMovie"
-            app:argType="" />
+
     </activity>
+
+    <activity
+        android:id="@+id/favoritesActivity"
+        android:name="com.example.themovie.ui.activity.FavoritesActivity"
+        tools:layout="@layout/activity_favorites"
+        >
+        <action app:destination="@id/detailsActivity" />
+    </activity>
+
 </navigation>
